fix header text overflow

--- a/main/static/styles/main.css
+++ b/main/static/styles/main.css
@@ -194,6 +194,10 @@ header {
     background: #36556e;
     padding-top: 32px;
     padding-bottom: 32px;
+    overflow: scroll;
+    padding-left: 8px;
+    padding-right: 8px;
+    box-sizing: border-box;
     box-shadow: inset 0 0 300px 20px rgba(0, 0, 0, 0.1);
 }
 @media (max-width: 700px) {
@@ -204,26 +208,17 @@ header {
 }
 
 .header-content {
-    width: 560px;
-    display: flex;
-    justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    overflow: scroll;
-}
-@media (max-width: 700px) {
-    .header-content {
-        width: 100%;
-    }
+    text-align: center;
 }
 
 .header-content a {
-    display: flex;
     line-height: 1.9;
     font-family: "Fira Mono", monospace, sans-serif;
     font-size: 36px;
-    color: #fff;
     white-space: nowrap;
+    color: #fff;
 }
 @media (max-width: 700px) {
     .header-content a {
